--- a/public/html/javascript.html
+++ b/public/html/javascript.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
         </nav>
+        <!--Seggbekuki-->
         <div id="main">
             <div class="col-4">
                 <div class="vertical-scroll-nav mx-auto">
