--- a/public/html/javascript.html
+++ b/public/html/javascript.html
@@ -51,6 +51,14 @@
                     <a href="#toDatabasebyid">Adatbázis keresés id alapján</a>
                     <a href="#toDatabaseinsert">Adatbázisba feltöltés</a>
                     <a href="#toDatabaseupdate">Adatbázis adatok frissítése</a>
+                    <a href="#toTabla">Táblagenerálás</a>
+                    <a href="#toSelect">Select</a>
+                    <a href="#toInsert">Insert</a>
+                    <a href="#toDelete">Delete</a>
+                    <a href="#toUpdate">Update</a>
+                    <a href="#toUpdate">Checkbex</a>
+                    <a href="#toCella">Cella feltöltése</a>
+
                 </div>
             </div>
 
@@ -511,8 +519,323 @@ postMethodFetch(url, postObject)
                     </div>
                 </div>
 
+                <button data-bs-toggle="collapse" data-bs-target="#tabla" class="collapseBtn" id="toTabla">
+                    Táblagenerál
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="tabla">
+                        <pre class="szovegek">
+Táblagenerálás + meghívás Kárpáti szerint.</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('tablaContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="TablaContent"><code class="language-html">
+function pTableWrite(data){
+    const hova=document.getElementById(&quot;projektBody&quot;);
+    hova.innerHTML=null;
+    for(let i=0;i &lt; data.length;i++)
+    {
+        let sor = document.createElement(&quot;tr&quot;);
+        sor.dataset=data[i].id;
+        let name = document.createElement(&quot;td&quot;);
+        name.innerHTML = data[i].name;
+        let description = document.createElement(&quot;td&quot;);
+        description.innerHTML = data[i].description;
+        sor.appendChild(name);
+        sor.appendChild(description);
+        hova.appendChild(sor);
+    }
+}
+
+document.addEventListener('DOMContentLoaded', async function () {
+    pTableWrite(await selectProjekt());
+    document.getElementById(&quot;newProjekt&quot;).addEventListener(&quot;click&quot;, async function () {
+        if ((await NewProjekt()).affectedRows &gt; 0) {
+            pTableWrite(await selectProjekt());
+        }
+    });
+    document.getElementById('deleteFormFeladat').addEventListener('click', resetFeladatForm);
+});                  
+</code></pre>
+                    </div>
+                </div>
+
+                               <button data-bs-toggle="collapse" data-bs-target="#select" class="collapseBtn" id="toSelect">
+                    Select (Kárpáti)
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="select">
+                        <pre class="szovegek">
+Select részei</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('selectContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="selectContent"><code class="language-html">
+Backend (db-queries.js)
+function selectAll() {
+    return new Promise((resolve, reject) =&gt; {
+        pool.query('SELECT * FROM tabla;', (err, result, fields) =&gt; {
+            if (err) return reject(err);
+            resolve(result);
+        });
+    });
+}
+module.exports = {
+    selectAll
+};
+
+Backend (app.js)
+app.get('/api/selectall', (request, response) =&gt; {
+    db.selectAll()
+        .then((data) =&gt; {
+            response.json(data);
+        })
+        .catch((err) =&gt; {
+            console.error('Error:', err);
+        });
+});
+
+Frontend (script)
+async function SelectAll() {
+    let response = fetch(&quot;/api/selectall&quot;, {
+        method: &quot;GET&quot;
+    });
+    return (await response).json();
+}              
+</code></pre>
+                    </div>
+                </div>
+                <button data-bs-toggle="collapse" data-bs-target="#insert" class="collapseBtn" id="toInsert">
+                    Insert (Kárpáti)
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="insert">
+                        <pre class="szovegek">
+Insert részei</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('insertContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="insertContent"><code class="language-html">
+Backend (db-queries.js)
+function insert(tomb) {
+    return new Promise((resolve, reject) =&gt; {
+        pool.query('INSERT INTO tabla (adat) VALUES (?);', [tomb], (err, result) =&gt; {
+            if (err) return reject(err);
+            resolve(result);
+        });
+    });
+}
+module.exports = {
+    insert
+};
+
+Backend (app.js)
+app.post('/api/insert',upload.single('file') , (request, response) =&gt; {
+    let tomb = [];
+    tomb.push(request.body.adat);
+    db.insert(tomb)
+        .then((data) =&gt; {
+            response.json(data);
+        })
+        .catch((err) =&gt; {
+            console.error('Error:', err);
+        });
+});
+
+Frontend (script)
+async function Insert() {
+    let formData = new FormData(document.getElementById(&quot;formid&quot;));
+    let response = fetch(&quot;/api/insert&quot;, {
+        method: &quot;POST&quot;,
+        body: formData
+    })
+    return (await response).json();
+}         
+</code></pre>
+                    </div>
+                </div>
+
+                <button data-bs-toggle="collapse" data-bs-target="#delete" class="collapseBtn" id="todelete">
+                    Delete (Kárpáti)
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="delete">
+                        <pre class="szovegek">
+Delete részei</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('deleteContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="deleteContent"><code class="language-html">
+Backend (db-queries.js)
+function delete(tomb) {
+    return new Promise((resolve, reject) =&gt; {
+        pool.query('DELETE FROM tabla WHERE id = ?;',tomb,(err, result) =&gt; {
+                if (err) return reject(err);
+                resolve(result);
+            }
+        );
+    });
+}
+
+module.exports = {
+    delete
+};
+
+Backend (app.js)
+app.post('/api/delete',upload.single('file') , (request, response) =&gt; {
+    let tomb = [];
+    tomb.push(request.body.id);
+    db.deleteAuto(tomb)
+        .then((data) =&gt; {
+            response.json(data);
+        })
+        .catch((err) =&gt; {
+            console.error('Error:', err);
+        });
+});
+
+Frontend (script)
+async function Delete(formData) {
+    let response = fetch(&quot;/api/delete&quot;, {
+        method: &quot;POST&quot;,
+        body: formData
+    })
+    return (await response).json();
+}
+
+async function Delete(id) {
+    const response = await fetch(&quot;/api/delete&quot;, {
+        method: &quot;POST&quot;,
+        headers: { &quot;Content-Type&quot;: &quot;application/json&quot; },
+        body: JSON.stringify({ id })
+    });
+    return await response.json();
+}
+</code></pre>
+                    </div>
+                </div>
 
 
+               
+
+                <button data-bs-toggle="collapse" data-bs-target="#update" class="collapseBtn" id="toUpdate">
+                    Update (Kárpáti)
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="update">
+                        <pre class="szovegek">
+Update részei</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('updateContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="updateContent"><code class="language-html">
+Backend (db-queries.js)
+function update(tomb) {
+    return new Promise((resolve, reject) =&gt; {
+        pool.query('UPDATE tabla SET adat=1 WHERE id=?;', tomb, (err, result) =&gt; {
+            if (err) return reject(err);
+            resolve(result);
+        });
+    });
+}
+
+module.exports = {
+    update
+};
+
+Backend (app.js)
+app.post('/api/update',upload.single('file') , (request, response) =&gt; {
+    let tomb = [];
+    tomb.push(request.body.id);
+    db.update(tomb)
+        .then((data) =&gt; {
+            response.json(data);
+        })
+        .catch((err) =&gt; {
+            console.error('Error:', err);
+        });
+});
+
+Frontend (script)
+async function update(formData) {
+    let response = fetch(&quot;/api/update&quot;, {
+        method: &quot;POST&quot;,
+        body: formData
+    })
+    return (await response).json();
+}
+</code></pre>
+                    </div>
+                </div>
+
+                <button data-bs-toggle="collapse" data-bs-target="#check" class="collapseBtn" id="toCheck">
+                    Checkbox (Kárpáti)
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="check">
+                        <pre class="szovegek">
+Táblázatba minden checkbox bejelölése és meghívása</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('checkContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="checkContent"><code class="language-html">
+function checkAll(tbody) {
+    let tabla = tbody.parentElement;
+    let cbAll = tabla.children[0].children[0].children[0].children[0].checked;
+    for (let i = 0; i &lt; tbody.children.length; i++) {
+        tbody.children[i].children[0].children[0].checked = cbAll;
+    }
+}
+
+document.getElementById(&quot;checkboxid&quot;).addEventListener(&quot;change&quot;, function () {
+        checkAll(document.getElementById(&quot;tbodyid&quot;))
+    })
+</code></pre>
+                    </div>
+                </div>
+
+
+                                <button data-bs-toggle="collapse" data-bs-target="#cella" class="collapseBtn" id="toCella">
+                    Cellafeltöltés
+                </button>
+
+                <div class="collapse mt-2 mb-5 pe-5" id="cella">
+                        <pre class="szovegek">
+</pre>
+                    <div class="card card-body position-relative">
+                        <button class="btn btn-sm btn-outline-secondary position-absolute top-0 end-0 m-2 copy-btn" onclick="copyCode('cellaContent')">
+                            Másolás
+                        </button>
+                        <pre class="bg-light p-3 rounded" id="cellaContent"><code class="language-html">
+const selectVarosBtn = () =&gt; {
+    const tbody = document.getElementById('varosBody');
+    let i = 0;
+    while (i &lt; tbody.children.length &amp;&amp; tbody.children[i].dataset.selected !== 'true') {
+        i++;
+    }
+    if (i &lt; tbody.children.length) {
+        const selected = tbody.children[i];
+        const cells = selected.children;
+        const form = document.getElementById('varosForm');
+
+        document.getElementById('vnev').value = cells[0].textContent;
+        document.getElementById('jaras').value = cells[1].textContent;
+        document.getElementById('kisterseg').value = cells[2].textContent;
+        document.getElementById('nepesseg').value = cells[3].textContent;
+        document.getElementById('terulet').value = cells[4].textContent;
+
+        form.dataset.selectedid = selected.dataset.id;
+    }
+};
+</code></pre>
+                    </div>
+                </div>
 
                 
             </div>
