--- a/public/html/javascript.html
+++ b/public/html/javascript.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="../html/csharp.html">C#</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/sql-seged.html">SQL</a>
+                            <a class="nav-link" href="../html/sql-seged.html" style="color: rgb(31, 37, 41);">SQL</a>
                         </li>
                     </ul>
                 </div>
